--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,14 @@
 }
 
 .post {
+  margin: 50px 0px;
+  padding: 20px;
   background-color: #333;
   color:white;
 }
 
 .about {
+  border-radius: 150px;
+  padding: 20px;
   background-color: rgb(74, 77, 255);
 }
